--- a/projects/ngmat-table-state-manager/package.json
+++ b/projects/ngmat-table-state-manager/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^10.0.5",
-    "@angular/core": "^10.0.5"
+    "@angular/core": "^10.0.5",
+    "@angular/cdk": "^10.1.1",
+    "@angular/material": "^10.1.1"
   },
   "dependencies": {
     "tslib": "^2.0.0"
