--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
-/*
-  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
-  It is not intended to be used to perform a compilation.
-
-  To learn more about this file see: https://angular.io/config/solution-tsconfig.
-*/
 {
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "allowJs": true
+  },
   "files": [],
   "references": [
     {
@@ -14,10 +12,10 @@
       "path": "./tsconfig.spec.json"
     },
     {
-      "path": "./projects/ngmat-table-state-manager/tsconfig.lib.json"
+      "path": "./projects/ngmat-table-query-reflector/tsconfig.lib.json"
     },
     {
-      "path": "./projects/ngmat-table-state-manager/tsconfig.spec.json"
+      "path": "./projects/ngmat-table-query-reflector/tsconfig.spec.json"
     }
-]
+  ],
 }
