package publish action update

--- a/.github/workflows/ngmat-table-query-reflector.yml
+++ b/.github/workflows/ngmat-table-query-reflector.yml
@@ -31,11 +31,8 @@ jobs:
       working-directory: ./
       run: npm run build:ngmat-table-state-manager
 
-    - name: Publish if version has been updated
-      uses: pascalgn/npm-publish-action@06e0830ea83eea10ed4a62654eeaedafb8bf50fc
-      with:
-        workspace: "dist/ngmat-table-query-reflector"
-
+    - name: Publish
+      working-directory: dist/ngmat-table-query-reflector
+      run: npm publish
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
-        NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # You need to set this in your repo settings
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
