--- a/projects/ngmat-table-query-reflector/package.json
+++ b/projects/ngmat-table-query-reflector/package.json
@@ -6,7 +6,9 @@
     "@angular/core": "^10.0.5",
     "@angular/cdk": "^10.1.1",
     "@angular/material": "^10.1.1",
-    "rxjs": "~6.5.5",
+    "rxjs": "~6.5.5"
+  },
+  "dependencies": {
     "tslib": "^2.0.0"
   },
   "repository": {
