--- a/.github/workflows/ngmat-table-query-reflector.yml
+++ b/.github/workflows/ngmat-table-query-reflector.yml
@@ -32,6 +32,6 @@ jobs:
 
       - name: Publish
         working-directory: dist/ngmat-table-query-reflector
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_AUTH_TOKEN }}
