app deploy script fix

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "npm run build:ngmat-table-state-manager && npm run build:app:prod",
+    "build:prod": "npm run build:prod:ngmat-table-state-manager && npm run build:app:prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
