--- a/.github/workflows/ngmat-table-query-reflector copy.yml
+++ b/.github/workflows/ngmat-table-query-reflector copy.yml
@@ -1,9 +1,9 @@
-name: npm-publish 'ngmat-table-query-reflector'
+name: npm-publish 'dynamic-browser-title'
 on:
   push:
     branches: [master]
     paths:
-      - "main/projects/ngmat-table-query-reflector/**"
+      - "main/projects/dynamic-browser-title/**"
 jobs:
   npm-publish:
     name: npm-publish
@@ -23,15 +23,15 @@ jobs:
         run: npm install
 
       - name: Install Package Dependencies
-        working-directory: main/projects/ngmat-table-query-reflector
+        working-directory: main/projects/dynamic-browser-title
         run: npm install
 
       - name: Build Package
         working-directory: ./main
-        run: npm run build:prod:ngmat-table-query-reflector
+        run: npm run build:prod:dynamic-browser-title
 
       - name: Publish
         uses: JS-DevTools/npm-publish@v1
         with:
-          package: main/dist/ngmat-table-query-reflector/package.json
+          package: main/dist/dynamic-browser-title/package.json
           token: ${{ secrets.NPM_AUTH_TOKEN }}
