--- a/main/projects/dynamic-browser-title/package.json
+++ b/main/projects/dynamic-browser-title/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "@nghacks/ngmat-table-query-reflector",
-  "version": "0.1.3",
-  "description": "Stores and retrieves mat table states (sorting, pagination) with url query params",
+  "name": "@nghacks/dynamic-browser-title",
+  "version": "0.1.0",
+  "description": "Updates browser title dynamically & automatically on route change",
   "keywords": [
     "angular",
-    "material",
-    "AngularMaterial",
+    "title",
     "nghacks",
-    "table",
-    "QueryParam",
-    "directive",
-    "URL",
+    "BrowserTitle",
+    "service",
     "ng",
-    "ngx",
-    "ngMat"
+    "ngx"
   ],
   "author": {
     "name": "Abdun Nahid",
@@ -26,11 +22,10 @@
   },
   "homepage": "https://ng-hack.web.app",
   "bugs": "https://github.com/abdunnahid/nghacks/issues",
+  "license": "MIT",
   "peerDependencies": {
     "@angular/common": "^10.0.5",
     "@angular/core": "^10.0.5",
-    "@angular/cdk": "^10.1.1",
-    "@angular/material": "^10.1.1",
     "rxjs": "~6.5.5"
   },
   "dependencies": {
