implement file uploader

--- a/main/package.json
+++ b/main/package.json
@@ -27,7 +27,7 @@
     "build:prod:ngmat-table-query-reflector": "ng build --project=ngmat-table-query-reflector --prod",
     "serve:dynamic-browser-title": "ng build --project=dynamic-browser-title --watch",
     "build:prod:dynamic-browser-title": "ng build --project=dynamic-browser-title --prod",
-    "serve:uploader": "ng build --project=uploader-title --watch",
+    "serve:uploader": "ng build --project=uploader --watch",
     "build:prod:uploader": "ng build --project=uploader --prod"
   },
   "private": true,
