--- a/main/tsconfig.base.json
+++ b/main/tsconfig.base.json
@@ -39,6 +39,10 @@
       "info-dialog": [
         "dist/info-dialog/info-dialog",
         "dist/info-dialog"
+      ],
+      "image-viewer": [
+        "dist/image-viewer/image-viewer",
+        "dist/image-viewer"
       ]
     }
   }
