--- a/main/package.json
+++ b/main/package.json
@@ -22,7 +22,7 @@
     "e2e": "ng e2e",
     "build:prod": "npm run build:packages:prod && npm run build:app:prod",
     "build:app:prod": "ng build --prod",
-    "build:packages:prod": "npm run build:prod:ngmat-table-query-reflector && npm run build:prod:dynamic-browser-title && npm run build:prod:uploader && npm run build:prod:info-dialog && npm run build:prod:image-viewer",
+    "build:packages:prod": "npm run build:prod:ngmat-table-query-reflector && npm run build:prod:dynamic-browser-title && npm run build:prod:uploader && npm run build:prod:info-dialog && npm run build:prod:image-viewer && npm run build:prod:quantity-input",
     "serve:ngmat-table-query-reflector": "ng build --project=ngmat-table-query-reflector --watch",
     "build:prod:ngmat-table-query-reflector": "ng build --project=ngmat-table-query-reflector --prod",
     "serve:dynamic-browser-title": "ng build --project=dynamic-browser-title --watch",
@@ -32,7 +32,9 @@
     "serve:info-dialog": "ng build --project=info-dialog --watch",
     "build:prod:info-dialog": "ng build --project=info-dialog --prod",
     "serve:image-viewer": "ng build --project=image-viewer --watch",
-    "build:prod:image-viewer": "ng build --project=image-viewer --prod"
+    "build:prod:image-viewer": "ng build --project=image-viewer --prod",
+    "serve:quantity-input": "ng build --project=quantity-input --watch",
+    "build:prod:quantity-input": "ng build --project=quantity-input --prod"
   },
   "private": true,
   "dependencies": {
